// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Vest's \`test\` function test params creates a test with a message and with a key 1`] = `
VestTest {
  "fieldName": "field_name",
  "id": "23",
  "key": "keyboardcat",
  "message": "failure message",
  "severity": "error",
  "status": "PASSING",
  "testFn": [Function],
}
`;

exports[`Test Vest's \`test\` function test params creates a test without a key 1`] = `
VestTest {
  "fieldName": "field_name",
  "id": "19",
  "key": null,
  "message": "failure message",
  "severity": "error",
  "status": "PASSING",
  "testFn": [Function],
}
`;

exports[`Test Vest's \`test\` function test params creates a test without a message and with a key 1`] = `
VestTest {
  "fieldName": "field_name",
  "id": "21",
  "key": "keyboardcat",
  "severity": "error",
  "status": "PASSING",
  "testFn": [Function],
}
`;

exports[`Test Vest's \`test\` function test params creates a test without a message and without a key 1`] = `
VestTest {
  "fieldName": "field_name",
  "id": "17",
  "key": null,
  "severity": "error",
  "status": "PASSING",
  "testFn": [Function],
}
`;
